packages/preview/ape/0.3.0/README.md
# Ape for Typst

  

Tired of documents that look like they were formatted by a troop of baboons? Try Ape for Typst!

  

This Typst package provides a comprehensive set of tools for structuring and styling academic course documents across various disciplines. It simplifies the process of creating good looking and consistent layouts, allowing students to focus on content creation.

  

**Key Features:**

  

*  **Flexible Title Numbering:** Offers a variety of numbering styles for headings and subheadings

*  **Table of Contents Customization:** Provides enhanced outline

*  **Front Page Design:** Offers a pre-designed front page templates

*  **Easy Integration:** Simple to integrate into your Typst documents with clear and concise functions and components.

*  **Helpful function:** function to highlight information (in boxes), shortcuts, plotting, etc.

  

**Benefits:**

  

*  **Consistent Formatting:** Ensures a uniform and professional look across all course materials.

*  **Time Saving:** Reduces the effort required to manually format titles, tables of contents, and front pages.

*  **Improved Readability:** Well-structured documents with clear numbering and formatting enhance the reader's experience.

  

**Functionalities:**


* Starting a new document
```typst
#import "@preview/ape:0.3.0": *

#show: doc.with(
  lang: "en",

  title: "Title",
  authors: ("Author1", "Author2"),
  style: "numbered",

  title-page: true,
  outline: true,
  smallcaps: true,
)
```


*Exemple 1 : (Style : numbered)*
![Exemple 1](exemples/Exemple1.png)

*Exemple 2 : (Style : colored)*

*Soon...*


## Further informations
* Available style
  - Numbered
  - Plain
  - Colored
  - Presentation

* Formatting Functions
  - `para(name, content)`: Create a named paragraph with custom content
  - `rq(content)`: Create a "Remarque" (note) paragraph
  - `ex(content)`: Create an "Exemple" (example) paragraph
  - `arrow-list(items)`: Create a list with arrow bullets
  - `inbox(content)`: Create a box with gray background and border
  - `inbox2(content)`: Create a box with custom line decorations

* Drawing and Plotting
  - `plotting(functions, domain, samples, steps, axis-style, axis, size)`: Plot mathematical functions with customizable options
  - `point(coordinates)`: Draw a point at given coordinates
  - `point-name(coordinates, name, offset)`: Draw a named point with custom offset
  - `quadratic(a, b, c)`: Calculate roots of quadratic equation
  - `base(coordinates, name1, name2, angle)`: Draw a base with custom angle
  - `spring(x0, y0, xf, yf, repetitions, amplitude)`: Draw a spring

* Mathematical Shortcuts
  - `recurrence(property, domain, initialization, heredity, conclusion)`: Format mathematical recurrence proofs
  - `dt`, `dx`, `dtheta`: Differential notations
  - `ar(content)`: Arrow notation
  - `nar(content)`: Norm of arrow notation
  - `dot2`, `dot3`: Double and triple dot notations
  - `grad`: Gradient notation
  - `cste`: Constant notation